fix: video overflow

--- a/assets/styles/body.sass
+++ b/assets/styles/body.sass
@@ -87,7 +87,7 @@ header
     left: auto
     right: 0
     opacity: 0
-    transition: opacity $nav-controls
+    transition: opacity $nav-animation
   p
     padding: 1rem
     cursor: pointer
