--- a/assets/styles/transitions.sass
+++ b/assets/styles/transitions.sass
@@ -7,7 +7,7 @@
 
 // NAV CONTROLS
 .navControls-enter-active
-  transition: opacity .33s ease 1s
+  transition: opacity $nav-animation $animation-duration
 
 .navControls-leave-active
   transition: 0
