--- a/assets/styles/vars/variables.sass
+++ b/assets/styles/vars/variables.sass
@@ -2,7 +2,8 @@ $breakpoint-mobile: 800px
 $breakpoint-laptop: 1440px
 
 // TRANSITIONS
-$nav-controls: .33s ease
+$nav-animation: .33s ease-in-out
+$animation-duration: 1s
 
 // TYPE GOLDEN RATIO 
 $color: black
